# finance-ai-engineer

./: .gitignore  debug-message-422-error.md  debug-umap-qdrant-drift.md  docker-compose.postgres.yaml  main.py  mlflow.db  pyproject.toml  qdrant_extractor.py  test_bm25.py  test_chat_witl_llm.py  test_connect_postgresql.py  test_create_prompt_mlflow.py  test_dense_search.py  test_gemini_chat.py  test_gradio.py  test_hdbscan.py  test_hello_word_mlflow.py  test_langchain_template.py  test_mlflow_create_artifact.py  test_mlflow_use_artifact.py  test_qdrant_extractor.py  test_qdrant_hydrid_search.py  test_qdrant_semantic_search.py  test_query_qdrant.py  test_sparse_search.py  test_unicode.py
.dbg/: message-422-error.env  trae-debug-log-umap-qdrant-drift.ndjson  umap-qdrant-drift.env
ai_engineer/applications/chatbot/app/: conversation_service.py
ai_engineer/applications/chatbot/applications/: models.py
ai_engineer/applications/topic_tagging/: READM.MD
ai_engineer/examples/use_case/: topic_tagging.py  umap_inference.py
ai_engineer/helpers/migration/: add_column_qdrant.py
ai_engineer/infrastructure/database/: alembic.ini  engine.py  env.py  example.py  models.py  session.py
ai_engineer/shared/llm/: create_llm.py
ai_engineer/shared/observability/: mlflow_config.py
src/examples/: qdrant_extractor.py  umap_transform.py
src/examples/use_case/: topic_tagging.py  training_umap.py  umap_inference.py
src/helpers/migration/: add_column_qdrant.py
src/infrastructure/database/: engine.py  env.py  example.py  models.py  session.py
src/utils/: monday_check.py
(+117 files in other folders)
