[project]
name = "finance-ai-engineer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.18.4",
    "apache-airflow>=3.2.2",
    "fastapi>=0.138.0",
    "fastembed>=0.8.0",
    "gradio>=6.19.0",
    "langchain>=1.3.12",
    "langchain-google-genai>=4.2.6",
    "load-dotenv>=0.1.0",
    "mlflow>=3.14.0",
    "polars>=1.41.2",
    "psycopg[binary]>=3.3.4",
    "qdrant-client>=1.18.0",
    "scikit-learn>=1.7.2",
    "umap-learn>=0.5.12",
    "underthesea>=9.5.0",
    "unidecode>=1.4.0",
    "uvicorn>=0.49.0",
]
